git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qtools@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,15 @@
 import(quantreg)
 import(mice)
+import(boot)
 
 exportPattern("^[^\\.]")
+S3method(coef, rq.counts)
+S3method(coef, rqt)
+S3method(fitted, rqt)
+S3method(predict, rrq)
+S3method(predict, rqt)
+S3method(predict, rq.counts)
+S3method(print, rqt)
+S3method(print, rq.counts)
+S3method(residuals, rq.counts)
+S3method(summary, rqt)
