--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,12 +2,12 @@ Package: Qtools
 Type: Package
 Title: Utilities for quantilies
 Version: 1.0
-Date: 2014-04-15
+Date: 2014-05-08
 Author: Marco Geraci
 Maintainer: Marco Geraci <m.geraci@ucl.ac.uk>
 Depends: R (>= 3.0.0)
-Imports: quantreg, mice
-Suggests: lqmm, survey
+Imports: quantreg, mice, boot
+Suggests: survey
 Description: Collection of functions for unconditional and conditional quantiles
 License: GPL (>= 2)
 URL: http://CRAN.R-project.org/package=Qtools
