git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qtools@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,6 +6,7 @@ exportPattern("^[^\\.]")
 S3method(coef, rq.counts)
 S3method(coef, rqt)
 S3method(fitted, rqt)
+S3method(fitted, rq.counts)
 S3method(predict, rrq)
 S3method(predict, rqt)
 S3method(predict, rq.counts)
