--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -7,6 +7,8 @@ S3method(coef, rq.counts)
 S3method(coef, rqt)
 S3method(fitted, rqt)
 S3method(fitted, rq.counts)
+S3method(maref, rqt)
+S3method(maref, rq.counts)
 S3method(predict, rrq)
 S3method(predict, rqt)
 S3method(predict, rq.counts)
