--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: Qtools
 Type: Package
 Title: Utilities for quantilies
 Version: 1.0
-Date: 2014-05-08
+Date: 2014-05-20
 Author: Marco Geraci
 Maintainer: Marco Geraci <m.geraci@ucl.ac.uk>
 Depends: R (>= 3.0.0)
@@ -10,5 +10,7 @@ Imports: quantreg, mice, boot
 Suggests: survey
 Description: Collection of functions for unconditional and conditional quantiles
 License: GPL (>= 2)
-URL: http://CRAN.R-project.org/package=Qtools
 LazyLoad: yes
+Repository: R-Forge
+Repository/R-Forge/Project: qtools
+Repository/R-Forge/Revision: 7
