--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,9 +2,9 @@ Package: Qtools
 Type: Package
 Title: Utilities for quantilies
 Version: 1.0
-Date: 2014-05-20
+Date: 2014-12-15
 Author: Marco Geraci
-Maintainer: Marco Geraci <m.geraci@ucl.ac.uk>
+Maintainer: Marco Geraci <geraci@mailbox.sc.edu>
 Depends: R (>= 3.0.0)
 Imports: quantreg, mice, boot
 Suggests: survey
