git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qtools@12 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,6 +1,7 @@
 import(quantreg)
 import(mice)
 import(boot)
+import(MASS)
 
 exportPattern("^[^\\.]")
 S3method(coef, rq.counts)
@@ -15,4 +16,6 @@ S3method(predict, rq.counts)
 S3method(print, rqt)
 S3method(print, rq.counts)
 S3method(residuals, rq.counts)
+S3method(sparsity, rq)
+S3method(sparsity, rqt)
 S3method(summary, rqt)
