--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2014-12-15
 Author: Marco Geraci
 Maintainer: Marco Geraci <geraci@mailbox.sc.edu>
 Depends: R (>= 3.0.0)
-Imports: quantreg, mice, boot
+Imports: quantreg, mice, boot, MASS
 Suggests: survey
 Description: Collection of functions for unconditional and conditional quantiles
 License: GPL (>= 2)
