git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qtools@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -13,9 +13,12 @@ S3method(maref, rq.counts)
 S3method(predict, rrq)
 S3method(predict, rqt)
 S3method(predict, rq.counts)
+S3method(print, GOFTest)
 S3method(print, rqt)
 S3method(print, rq.counts)
+S3method(residuals, rqt)
 S3method(residuals, rq.counts)
 S3method(sparsity, rq)
+S3method(sparsity, rqs)
 S3method(sparsity, rqt)
 S3method(summary, rqt)
