--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -14,6 +14,7 @@ S3method(predict, rrq)
 S3method(predict, rqt)
 S3method(predict, rq.counts)
 S3method(print, GOFTest)
+S3method(print, rrq)
 S3method(print, rqt)
 S3method(print, rq.counts)
 S3method(residuals, rqt)
@@ -21,4 +22,5 @@ S3method(residuals, rq.counts)
 S3method(sparsity, rq)
 S3method(sparsity, rqs)
 S3method(sparsity, rqt)
+S3method(summary, rrq)
 S3method(summary, rqt)
