--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,12 +2,13 @@ Package: Qtools
 Type: Package
 Title: Utilities for Quantiles
 Version: 1.0
-Date: 2015-05-20
+Date: 2015-10-15
 Author: Marco Geraci
 Maintainer: Marco Geraci <geraci@mailbox.sc.edu>
 Depends: R (>= 3.0.0)
-Imports: quantreg, mice, boot, MASS
-Suggests: survey
-Description: This is a collection of functions for unconditional and conditional quantiles
+Imports: stats, utils, quantreg, mice, boot, MASS
+Suggests: survey, R.rsp
+VignetteBuilder: R.rsp
+Description: This is a collection of functions for unconditional and conditional quantiles.
 License: GPL (>= 2)
 LazyLoad: yes
